--- a/src/views/give-classes.html
+++ b/src/views/give-classes.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/styles/partials/page-give-classes.css">
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&amp;family=Poppins:wght@400;600&amp;display=swap" rel="stylesheet">
   <script src="/scripts/addField.js" defer></script>
+  <script src="/scripts/removeField.js" defer></script>
 </head>
 <body id="page-give-classes">
   <div id="container">
@@ -77,6 +78,7 @@
 
       <fieldset id="schedule-itens">
         <legend>Horários disponíveis
+          <button type="button" id="remove-time">- Remover Horário</button>
           <button type="button" id="add-time">+ Novo Horário</button>
         </legend>
 
