--- a/public/styles/partials/header.css
+++ b/public/styles/partials/header.css
@@ -1,4 +1,3 @@
-
 .page-header {
   background: var(--color-primary);
   display: flex;
@@ -16,7 +15,6 @@
 
 .page-header .top-bar-container a {
   height: 3.2rem;
-  
 }
 
 .page-header .top-bar-container a:hover {
@@ -25,6 +23,10 @@
 
 .page-header .top-bar-container > img {
   height: 1.6rem;
+}
+
+.page-header .top-bar-container p {
+  color: var(--color-text-top-header);
 }
 
 .page-header .header-content {
@@ -44,7 +46,22 @@
   font-size: 1.6rem;
   line-height: 2.6rem;
   color: var(--color-text-in-primary);
-  margin-top: 2.4rem;
+  margin-top: 2rem;
+}
+
+.header-content .legend-container .legend-content {
+  display: flex;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.header-content .legend-container .legend-content img {
+  margin-right: 1.4rem;
+}
+
+.header-content .legend-container .legend-content p {
+  margin-top: 0;
+  font-size: 1.4rem;
 }
 
 @media (min-width:700px) {
@@ -68,6 +85,12 @@
 
   .page-header .header-content strong {
     max-width: 350px;
+  }
+
+  .header-content .legend-container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 
 }
